[tool.poetry]
name = "geosample"
version = "0.1.0"
description = ""
authors = ["Gregory Simpson <gregory.simpson@earthoptics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
geopandas = "^0.13.2"
pandas = "^2.0.3"
numpy = "^1.25.1"
shapely = "^2.0.1"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
